# ace-skyspark-cli

./: .gitignore  JOB_CONFIG_GUIDE.md  README.md  RELEASE.md  TEST_SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test-multi-python.yml
src/ace_skyspark_cli/: __init__.py  config.py  job_config.py  logging.py  sync.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_duplicate_prevention.py  test_idempotency.py  test_integration.py  test_sync.py  test_tag_sync.py  test_unit_haystack_ref.py  test_unit_skyspark.py  test_unit_utils.py  test_utils.py
